fix: iFrame overlapping issue

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -10,6 +10,7 @@
   border-bottom: 1px solid var(--darkGray-color2);
   display: flex;
   flex-wrap: wrap;
+  z-index: 10;
 }
 
 .logo {
